--- a/Format Checker/.project
+++ b/Format Checker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Formar Checker</name>
+	<name>Format Checker</name>
 	<comment></comment>
 	<projects>
 	</projects>
