--- a/Analysis of Algorithms/.project
+++ b/Analysis of Algorithms/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Analysis Of Algorithms</name>
+	<name>Analysis of Algorithms</name>
 	<comment></comment>
 	<projects>
 	</projects>
