--- a/Mergesort/.gitignore
+++ b/Mergesort/.gitignore
@@ -4,3 +4,6 @@
 /SortTester.class
 /WrappedDLL.class
 /Practice.class
+/DoubleNode.class
+/IUDoubleLinkedList$IUDLLiterator.class
+/IUDoubleLinkedList.class
